--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^7.11.1",
+    "@mui/x-date-pickers-pro": "^7.11.1",
+    "dayjs": "^1.11.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1"
